01-deploy-protected.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-node-protected
  labels:
    app: simple-node-protected
    service: simple-node-protected
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 3000
  selector:
    app: simple-node-protected
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-node-protected
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-node-protected
      version: v1
  template:
    metadata:
      labels:
        app: simple-node-protected
        version: v1
    spec:
      serviceAccountName: simple-node-protected
      containers:
      - image: iaziz786/simple-node-protected:latest
        imagePullPolicy: Always
        name: simple-node-protected
        ports:
        - containerPort: 3000
