06-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simple-node-protected-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-node-protected
spec:
  hosts:
  - "*"
  gateways:
  - simple-node-protected-gateway
  http:
  - match:
    - uri:
        prefix: /protected
    route:
    - destination:
        port:
          number: 8000
        host: simple-node-protected
