05-authz-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ext-authz
spec:
  selector:
    matchLabels:
      app: simple-node-protected

  action: CUSTOM
  
  provider:
    name: sample-ext-authz-http
  rules:
    - to:
        - operation:
            paths:
              - '*'
